# thats-odd

./: Cargo.toml
src/: lib.rs  u16.rs  u8.rs
