[package]
name = "thats-odd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
u8 = []
u32 = []
u64 = []
u128 = []
usize = []
i8 = []
i32 = []
i64 = []
i128 = []
isize = []
default = ["u32"]
