[package]
name = "thats-odd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[features]
u8 = []
u16 = []
u32 = []
u64 = []
u128 = []
i8 = []
i16 = []
i32 = []
i64 = []
i128 = []
default = ["u32"]
